[package]
name = "ros"
version = "0.1.0"
authors = ["professor <friedrichdoku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.7.5"
uart_16550 = "0.2.0"

[[test]]
name = "should_panic"
harness = false
path = "src/tests/should_panic.rs"

[[test]]
name = "stack_overflow"
harness = false
path = "src/tests/stack_overflow"

[package.metadata.bootimage]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio","-display","none"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
